# example_pybind11

./: CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_wheels.yml
cc/src/: _example.cpp  example.cpp  example.h
py/src/example/: example.py
py/tests/: test_example.py
