[build-system]
requires = ["setuptools >= 61.0","pybind11[global]>=2.11","scikit-build>=0.13"]
build-backend = "setuptools.build_meta"

[project]
name="example"
version="0.1"
requires-python = ">= 3.10"
authors = [{name = "Robert Schrom", email="rschrom.science@gmail.com"}]
description = "Example pybind11 interface"
readme = "README.md"
